fix: text wrap in project view

--- a/client/admin/components/ProjectCard/ProjectCard.css
+++ b/client/admin/components/ProjectCard/ProjectCard.css
@@ -55,6 +55,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
+    word-break: break-all;
 }
 
 .projectCard>.content>.title>.name {
